samples/_failures_safe/1761527940_f067d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f332ea43.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f332ea43.c:171:13: error: expected declaration or statement at end of input
  171 |             }
      |             ^
./samples/SAFE/__tmp_f332ea43.c:171:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f332ea43.c:171:13: error: expected declaration or statement at end of input
